<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginScreen.LoginFragment">

    <TextView
        android:id="@+id/tips_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_title"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/phone_number_edit_text_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/icon_of_phone_number_field"
        android:src="@drawable/ic_baseline_phone_android_24"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_number_edit_text" />


    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/phone_number_edit_text_icon"
        app:layout_constraintTop_toBottomOf="@+id/tips_title"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/password_edit_text_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/icon_of_password_field"
        android:src="@drawable/ic_key_24"
        app:layout_constraintBottom_toBottomOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_edit_text" />


    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_edit_text_icon"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button"
        android:text="@string/continue_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>