<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginScreen.LoginFragment">

    <TextView
        android:id="@+id/tips_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_title"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surname_placeholder_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/surname_view"
        app:layout_constraintEnd_toEndOf="@+id/surname_view"
        app:layout_constraintStart_toStartOf="@+id/surname_view" />

    <ImageView
        android:id="@+id/surname_icon_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/surname_icon_field"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/surname_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/surname_view" />

    <TextView
        android:id="@+id/surname_view"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/surname_icon_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/tips_title"
        tools:text="Doe" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:contentDescription="@string/underline_for_textview"
        android:src="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/surname_view"
        app:layout_constraintStart_toStartOf="@+id/surname_view"
        app:layout_constraintTop_toBottomOf="@+id/surname_view" />

    <TextView
        android:id="@+id/name_placeholder_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/name_view"
        app:layout_constraintEnd_toEndOf="@+id/name_view"
        app:layout_constraintStart_toStartOf="@+id/name_view" />

    <ImageView

        android:id="@+id/name_icon_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/name_icon_field"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_view" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_icon_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/surname_view"
        tools:text="John" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:contentDescription="@string/underline_for_textview"
        android:src="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/name_view"
        app:layout_constraintStart_toStartOf="@+id/name_view"
        app:layout_constraintTop_toBottomOf="@+id/name_view" />

    <TextView
        android:id="@+id/phone_number_placeholder_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_view"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_view"
        app:layout_constraintStart_toStartOf="@+id/phone_number_view" />

    <ImageView
        android:id="@+id/phone_number_icon_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/phone_number_icon"
        android:src="@drawable/ic_baseline_phone_android_24"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_number_view" />

    <TextView
        android:id="@+id/phone_number_view"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/phone_number_icon_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/name_view"
        tools:text="+380671112233" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:contentDescription="@string/underline_for_textview"
        android:src="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_view"
        app:layout_constraintStart_toStartOf="@+id/phone_number_view"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_view" />

</androidx.constraintlayout.widget.ConstraintLayout>